syntax = "proto3";

option java_package = "githubprofilesearcher.caiodev.com.br.githubprofilesearcher";
option java_multiple_files = true;

message ProfilePreferences {
  bool hasUserDeletedProfileText = 1;
  string profile = 2;
  bool shouldRecyclerViewAnimationBeExecuted = 3;
  string temporaryCurrentProfile = 4;
  string currentProfile = 5;
  int32 pageNumber = 6;
  bool hasASuccessfulCallAlreadyBeenMade = 7;
  bool hasLastCallBeenUnsuccessful = 8;
  bool isThereAnOngoingCall = 9;
  bool hasUserRequestedUpdatedData = 10;
  bool shouldASearchBePerformed = 11;
  bool isTextInputEditTextNotEmpty = 12;
  bool isHeaderVisible = 13;
  bool isEndOfResultsViewVisible = 14;
  bool isPaginationLoadingViewVisible = 15;
  bool isRetryViewVisible = 16;
}